# xiaguo-ai-agent-mvp-demo

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  RUNNING.md  app.js  config.js  docker-compose.yml  index.html  package.json  render.yaml  server.js  styles.css
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: ai.py  auth.py  config.py  db.py  deps.py  domain.py  main.py  models.py  repository.py  routes.py  schemas.py  security.py  services.py  storage.py
backend/migrations/: 001_init.sql  README.md
backend/scripts/: init_db.py  migrate_db.py  seed_demo_data.py
docs/: AI_Agent设计.md  Demo应用化具体操作说明.md  Demo应用化改进路线图.md  Eval数据集与人工标注准备说明.md  MVP说明.md  UIUX重设修改路径_v2.md  下一阶段路径图.md  单人可执行的小程序化改进路线.md  小程序体验版运行与审核边界说明.md  应用化技术需求清单.md  当前产品状态与研发进度.md  用户协议与隐私说明草案.md  真实AI接入.md  立项申报书预期与当前产品差距分析.md  第一阶段成果报告.md  苹果分级规则.md
eval/: apple_eval_set.json
miniprogram/: README.md  app.js  app.json  app.wxss  project.config.json
miniprogram/pages/ai-result/: ai-result.js  ai-result.json  ai-result.wxml
miniprogram/pages/eval/: eval.js  eval.json  eval.wxml  eval.wxss
miniprogram/utils/: data-store.js
scripts/: dev-server.js  run_eval_v0_1.mjs  test-app-store.mjs  test-consumer-controller.mjs  test-farmer-controller.mjs  test-farmer-workflow.mjs  test-ops-controller.mjs
src/core/: api-client.js  app-store.js  view-router.js
src/domain/: apple-grading.js
src/shared/: dom.js  presentation.js
src/styles/: accessibility.css  experience.css  main.css  role-layouts.css
(+38 files in other folders)
