[project]
name = "xiaguo-backend"
version = "0.1.0"
description = "FastAPI backend scaffold for the Xiaguo grading workflow"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "pydantic>=2.7",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
]

[tool.uvicorn]
factory = false
